--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fcc-learn-npm-package-json",
   "author": "Maicol Egas",
-  "description": "A project that does something awesome",
+  "description": "A project that does something awesome and deply my entrerpeanur",
   "dependencies": {
     "express": "^4.14.0"
   },
